CHATS_SIT/force-app/main/default/objects/T_ADJMT_CANCEL__c.object
<CustomObject>
    <description>This object will store the details of all the Recovery Adjustment Cancellations</description>
    <label>Adjustment Cancellation</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustment Cancellation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>CDE_RSN_CANCELLATION__c</fullName>
        <label>Reason for Cancellation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00862</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_STATUS__c</fullName>
        <label>Cancellation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00863</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_INIT_CANCEL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recovery Cancellation Initiation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DTE_DISC_CANCELLATION__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cancellation Discovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_ADJMT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment</label>
        <referenceTo>T_ADJMT__c</referenceTo>
        <relationshipLabel>Adjustment Cancellation</relationshipLabel>
        <relationshipName>Adjustment_Cancellation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSN_CANCEL_BODY__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Cancellation Body</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSN_CANCEL_SUBJECT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Cancellation Subject</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_DUE_DATE_RMDR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date Reminder</label>
        <type>Date</type>
    </fields>
    <validationRules>
        <fullName>Cancellation_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>DTE_DISC_CANCELLATION__c &gt;  TODAY()</errorConditionFormula>
        <errorMessage>Begin date cannot be a future date.</errorMessage>
    </validationRules>
    <!--Commented as part of CCCAP-10798-->
    <!--validationRules>
        <fullName>Status_Based_Access</fullName>
        <active>false</active>
        <description>When the cancellation record is in Submitted, Approved, Denied or Withdrawn the record will not be editable</description>
        <errorConditionFormula>AND(OR($Profile.Name = &quot;Business Office Supervisor&quot;, $Profile.Name = &quot;Universal User&quot;,$Profile.Name = &quot;Fiscal Worker Supervisor&quot;, $Profile.Name = &quot;CCCAP Program Internal Team&quot;),OR(ISPICKVAL(CDE_STATUS__c, &apos;2&apos;),ISPICKVAL(CDE_STATUS__c, &apos;3&apos;),ISPICKVAL(CDE_STATUS__c, &apos;4&apos;),ISPICKVAL(CDE_STATUS__c, &apos;6&apos;)))</errorConditionFormula>
        <errorMessage>This record can only be edited in Draft or Need Revision Status.</errorMessage>
    </validationRules-->
</CustomObject>