CHATS_SIT/force-app/main/default/objects/T_ADJMT_CANCEL__c/validationRules/Cancellation_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>DTE_DISC_CANCELLATION__c &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Begin date cannot be a future date.</errorMessage>
</ValidationRule>